# tree-sitter-autohotkey-v2

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-autohotkey-v2.pc.in
bindings/c/tree_sitter/: tree-sitter-autohotkey-v2.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_autohotkey_v2/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAutohotkeyV2Tests/: TreeSitterAutohotkeyV2Tests.swift
src/: grammar.json  node-types.json  parser.c
